# temoto_utils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
temoto_action_assistant/: CMakeLists.txt  README.md  package.xml
temoto_action_assistant/file_templates/: ta_class_base.xml  ta_comment_block.xml  ta_execute_action.xml  ta_get_input_params.xml  ta_line_comment.xml  ta_parameter_decl.xml  ta_parameter_in.xml  ta_parameter_out.xml  ta_set_output_params.xml  temoto_ta_action_test_separate.xml  temoto_ta_action_test_standalone.xml  temoto_ta_bridge_header.xml  temoto_ta_cmakelists.xml  temoto_ta_macros_header.xml  temoto_ta_packagexml.xml  temoto_ta_umrf_graphtxt.xml  temoto_ta_update_params_elif.xml
temoto_action_assistant/include/temoto_action_assistant/: ta_package_generator.h  threaded_action_indexer.h
temoto_action_assistant/include/temoto_action_assistant/widgets/: action_assistant_widget.h  description_edit_widget.h  effect_edit_widget.h  generate_package_widget.h  interface_edit_widget.h  name_edit_widget.h  parameter_add_dialog_widget.h  parameter_edit_widget.h  parameter_group_edit_widget.h  start_screen_widget.h  umrf_editor_widget.h  umrf_graph_widget.h  umrf_tree_data.h  umrf_tree_widget.h
temoto_action_assistant/launch/: action_assistant.launch
temoto_action_assistant/resources/: default_umrf.json
temoto_action_assistant/src/: action_assistant_main.cpp  ta_package_generator.cpp  threaded_action_indexer.cpp
temoto_action_assistant/src/widgets/: action_assistant_widget.cpp  description_edit_widget.cpp  effect_edit_widget.cpp  generate_package_widget.cpp  header_widget.cpp  name_edit_widget.cpp  navigation_widget.cpp  parameter_add_dialog_widget.cpp  parameter_edit_widget.cpp  parameter_group_edit_widget.cpp  setup_screen_widget.cpp  start_screen_widget.cpp  umrf_editor_widget.cpp  umrf_graph_widget.cpp  umrf_tree_widget.cpp
temoto_action_assistant/umrf_parameters/: my_number.param.umrf.json  my_string.param.umrf.json  pose_2d.param.umrf.json  pose_quat.param.umrf.json  pose_rpy.param.umrf.json
temoto_workspace_generator/: CMakeLists.txt  package.xml
temoto_workspace_generator/src/: generate_workspace.cpp
temoto_workspace_generator/templates/: temoto_ws_aa_launch.xml  temoto_ws_action_config.xml  temoto_ws_cmakelists.xml  temoto_ws_components.xml  temoto_ws_packagexml.xml  temoto_ws_temoto_launch.xml
