<?xml version="1.0"?>
<package format="2">
  <name>temoto_action_assistant</name>
  <version>0.0.0</version>
  <description>The temoto_action_assistant package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>file_template_parser</depend>
  <depend>temoto_action_engine</depend>
  <depend>qtbase5-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

