<?xml version="1.0"?>
<package format="2">
  <name>temoto_workspace_generator</name>
  <version>0.0.0</version>
  <description>The temoto_workspace_generator package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>file_template_parser</depend>

</package>